contact details, search bar and interactive map added, yet to be styled

--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
          (function(){
             emailjs.init("user_oaKOpLf7qMVhjLSIICjCg");
          })();
-      </script> 
+      </script>  
       <title>Contact</title>
-   </head> 
-   <body>
+   </head>   
+   <body>  
       <!--NAVBAR--> 
     <nav class="navbar navbar-dark navbar-expand-sm">
          <a class="navbar-brand" href="index.html" style="max-width: 30%;">
@@ -32,14 +32,14 @@
                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
                <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
-            </ul>    
-         </div>      
-      </nav>       
-      <!--CONTACT FORM-->  
-      <section class="form-page">
+            </ul>     
+         </div>       
+      </nav>          
+      <!--CONTACT FORM-->   
+    <section class="form-page"> 
          <div class="col-12">
             <div class="main-form">
-               <h3>get in touch!</h3>
+               <h2>get in touch!</h2>
                <p>We'd love to hear from you...</p>
                <form id="myform" onsubmit="return sendMail(this);" method="POST">
                   <input type="text" class="form-control" name="from_name" placeholder="Name" required/>
@@ -48,11 +48,47 @@
                   <div class="form-row text-center">
                      <div class="col-12"><button type="submit" class="btn btn-primary center-block">Send</button></div>
                   </div> 
-               </form>    
-            </div>   
-         </div>     
+               </form>     
+            </div>      
+         </div>        
       </section> 
-      <!--FOOTER--> 
+ 
+       <section class="find-me">
+        <div class="container-fluid">
+            <div class="row"> 
+                <div class="container-fluid">
+                    <h1>FIND US</h1>
+                </div>
+            </div>
+            <!--GOOGLE MAPS IFRAME-->
+            <div class="row">  
+                <div class="col-sm-8"> 
+                    <div class="iframe-container">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <div class="iframe-container">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2375.3297035060914!2d-6.232166283522414!3d53.462567480003514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486710e6ec166d21%3A0x27da86fdc5fc94c0!2sJC&#39;s%20Supermarket!5e0!3m2!1sen!2sie!4v1568212954044!5m2!1sen!2sie" width="600" height="450" allowfullscreen="" class="embed-responsive-item" style=" border: 3px solid white;border-radius: 15px;"></iframe>
+                            </div>
+                        </div> 
+                    </div>
+                </div>  
+    
+                <!--CONTACT DETAILS--> 
+                <div class="col-sm-4">
+                    <div class="find-me-container container-fluid text-center">
+                        <h3>address</h3>
+                        <p>My Travel Pal<br>Dorset Street<br> Dublin 1
+                        </p>
+                        <h3>email</h3>
+                        <p>info@rmytravelpal.com</p> 
+                        <h3>phone</h3>
+                        <p>+353 (01) 8401222</p>
+                        <br>
+                    </div> 
+                </div>
+            </div> 
+        </div>
+    </section> 
+       <!--FOOTER--> 
       <footer class="container-fluid footer-details">
          <div class="row footer-details">
             <div class="col-xs-12 col-sm-12">
