amended styling, added iframe to contact.html

--- a/contact.html
+++ b/contact.html
@@ -10,33 +10,33 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
       <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
       <link rel="stylesheet" href="assets/css/style.css">
-      <script type="text/javascript"
+      <script 
          src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
-      <script type="text/javascript">
-         (function(){
+      <script>
+         (function(){  
             emailjs.init("user_oaKOpLf7qMVhjLSIICjCg");
          })();
       </script>  
       <title>Contact</title>
-   </head>    
-   <body>   
+   </head>
+   <body>
       <!--NAVBAR--> 
-    <nav class="navbar navbar-dark navbar-expand-sm">
+      <nav class="navbar navbar-dark navbar-expand-sm">
          <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
          </a> 
          <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span></button>
-         <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
-            <ul class="navbar-nav ml-auto"> 
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
                <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
-            </ul>     
-         </div>       
-      </nav>          
+            </ul>
+         </div>
+      </nav>
       <!--CONTACT FORM-->   
-    <section class="form-page"> 
+      <section class="form-page">
          <div class="col-12">
             <div class="main-form">
                <h3>get in touch!</h3>
@@ -47,48 +47,46 @@
                   <textarea rows="10"  class="form-control" name="query" placeholder="Type your query here..." required></textarea>
                   <div class="form-row text-center">
                      <div class="col-12"><button type="submit" class="btn btn-primary center-block">Send</button></div>
-                  </div> 
-               </form>     
-            </div>      
-         </div>       
-      </section> 
- 
-       <section class="find-me">
-        <div class="container-fluid">
-            <div class="row"> 
-                <div class="container-fluid">
-                    <h1>FIND US</h1>
-                </div>
+                  </div>
+               </form>
+            </div>
+         </div>
+      </section>
+      <section class="find-me">
+         <div class="container-fluid">
+            <div class="row">
+               <div class="container-fluid">
+                  <h1>FIND US</h1>
+               </div>
             </div>
             <!--GOOGLE MAPS IFRAME-->
-            <div class="row">  
-                <div class="col-sm-8"> 
-                    <div class="iframe-container">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <div class="iframe-container">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2375.3297035060914!2d-6.232166283522414!3d53.462567480003514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486710e6ec166d21%3A0x27da86fdc5fc94c0!2sJC&#39;s%20Supermarket!5e0!3m2!1sen!2sie!4v1568212954044!5m2!1sen!2sie" width="600" height="450" allowfullscreen="" class="embed-responsive-item" style=" border: 3px solid white;border-radius: 15px;"></iframe>
-                            </div>
-                        </div> 
-                    </div>
-                </div>   
-    
-                <!--CONTACT DETAILS--> 
-                <div class="col-sm-4">
-                    <div class="find-me-container container-fluid text-center">
-                         <h3>address</h3>
-                        <p>My Travel Pal<br>Dorset Street<br> Dublin 1
-                        </p>
-                        <h3>email</h3>
-                        <p>info@rmytravelpal.com</p> 
-                        <h3>phone</h3>
-                        <p>+353 (01) 8401222</p>
-                        <br>
-                    </div> 
-                </div>
-            </div> 
-        </div>
-    </section> 
-       <!--FOOTER--> 
+            <div class="row">
+               <div class="col-sm-8">
+                  <div class="iframe-container">
+                     <div class="embed-responsive embed-responsive-16by9">
+                        <div class="iframe-container">
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.0977399094672!2d-6.263888747976512!3d53.35940567988351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e7c51dc2dd7%3A0x287a54967bde958e!2sDorset%20Street%20Lower%2C%20Northside%2C%20Dublin!5e0!3m2!1sen!2sie!4v1576252659169!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!--CONTACT DETAILS--> 
+               <div class="col-sm-4">
+                  <div class="find-me-container container-fluid text-center">
+                     <h3>address</h3>
+                     <p>My Travel Pal<br>Dorset Street<br> Dublin 1
+                     </p>
+                     <h3>email</h3>
+                     <p>info@rmytravelpal.com</p>
+                     <h3>phone</h3>
+                     <p>+353 (01) 8401222</p>
+                     <br>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!--FOOTER--> 
       <footer class="container-fluid footer-details">
          <div class="row footer-details">
             <div class="col-xs-12 col-sm-12">
