--- a/my-places.html
+++ b/my-places.html
@@ -1,130 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="author" content="Elaine Archbold">
-      <meta name="description" content="My Travel Pal My Places Page">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
-      <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-      <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
-      <script src="https://www.amcharts.com/lib/3/maps/js/worldHigh.js"></script>
-      <script src="https://www.amcharts.com/lib/3/themes/dark.js"></script>
-      <link rel="stylesheet" href="assets/css/style.css">
-      <title>My Places</title>
-   </head>
-   <body>
-      <!--NAVBAR-->    
-      <nav class="navbar navbar-dark navbar-expand-sm">
-         <a class="navbar-brand" href="index.html" style="max-width: 30%;">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Elaine Archbold">
+    <meta name="description" content="My Travel Pal My Places Page">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
+    <script src="https://www.amcharts.com/lib/3/maps/js/worldHigh.js"></script>
+    <script src="https://www.amcharts.com/lib/3/themes/dark.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>My Places</title>
+</head>
+
+<body>
+    <!--NAVBAR-->
+    <nav class="navbar navbar-dark navbar-expand-sm">
+        <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
-         </a> 
-         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         </a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span></button>
-         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-               <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
-               <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
-               <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
+                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
+                <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
+                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
             </ul>
-         </div>
-      </nav>
-      <!--SECTION ONE-->         
-      <section class="my-places">
-         <h2>My Places</h2>
-         <p>Where in the world have you been?</p>
-         <div id="mapdiv"></div>
-         <div class="section-map-list">
-            <ul class="nav nav-tabs">
-               <li class="active">
-                  <a href="#europe" data-anchor="europe" data-toggle="tab">Europe</a>
-               </li>
-               <li>   
-                  <a href="#northAmerica" data-anchor="northAmerica" data-toggle="tab">North America</a>
-               </li>
-               <li>
-                  <a href="#southAmerica" data-anchor="southAmerica" data-toggle="tab">South America</a>
-               </li>
-               <li>
-                  <a href="#africa" data-anchor="africa" data-toggle="tab">Africa</a>
-               </li>
-               <li>
-                  <a href="#asia" data-anchor="asia" data-toggle="tab">Asia</a>
-               </li>
-               <li>
-                  <a href="#oceania" data-anchor="oceania" data-toggle="tab">Oceania</a>
-               </li>
-            </ul>
-            <div class="tab-content">
-               <div id="europe" class="tab-pane active">
-                  <table class="table table-hover table-striped">
-                     <tbody></tbody>
-                  </table>
-               </div>
-               <div id="northAmerica" class="tab-pane">
-                  <table class="table table-hover table-striped">
-                     <tbody></tbody>
-                  </table>
-               </div>
-               <div id="southAmerica" class="tab-pane">
-                  <table class="table table-hover table-striped">
-                     <tbody></tbody>
-                  </table>
-               </div>
-               <div id="africa" class="tab-pane">
-                  <table class="table table-hover table-striped">
-                     <tbody></tbody>
-                  </table>
-               </div>
-               <div id="asia" class="tab-pane">
-                  <table class="table table-hover table-striped">
-                     <tbody></tbody>
-                  </table>
-               </div>
-               <div id="oceania" class="tab-pane">
-                  <table class="table table-hover table-striped">
-                     <tbody></tbody>
-                  </table>
-               </div>
+        </div>
+    </nav>
+    <!--SECTION ONE-->
+    <section class="my-places">
+        <h2>My Places</h2>
+        <p>Where in the world have you been?</p>
+
+
+        <div class="directions">
+            <h4>Click and drag to move the map. <br>Click an map area to select or select from the list</h4>
+        </div>
+
+        <div class="row">
+            <div id="mapdiv">
             </div>
-         </div>
-      </section>
-      <!--FOOTER-->
-      <footer class="container-fluid footer-details">
-         <div class="row footer-details">
+            <div class="section-map-list">
+                <ul class="nav nav-tabs">
+                    <li class="active">
+                        <a href="#europe" data-anchor="europe" data-toggle="tab">Europe</a>
+                    </li>
+                    <li>
+                        <a href="#northAmerica" data-anchor="northAmerica" data-toggle="tab">North America</a>
+                    </li>
+                    <li>
+                        <a href="#southAmerica" data-anchor="southAmerica" data-toggle="tab">South America</a>
+                    </li>
+                    <li>
+                        <a href="#africa" data-anchor="africa" data-toggle="tab">Africa</a>
+                    </li>
+                    <li>
+                        <a href="#asia" data-anchor="asia" data-toggle="tab">Asia</a>
+                    </li>
+                    <li>
+                        <a href="#oceania" data-anchor="oceania" data-toggle="tab">Oceania</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div id="europe" class="tab-pane active">
+                        <table class="table table-hover table-striped">
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div id="northAmerica" class="tab-pane">
+                        <table class="table table-hover table-striped">
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div id="southAmerica" class="tab-pane">
+                        <table class="table table-hover table-striped">
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div id="africa" class="tab-pane">
+                        <table class="table table-hover table-striped">
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div id="asia" class="tab-pane">
+                        <table class="table table-hover table-striped">
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div id="oceania" class="tab-pane">
+                        <table class="table table-hover table-striped">
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--FOOTER-->
+    <footer class="container-fluid footer-details">
+        <div class="row footer-details">
             <div class="col-xs-12 col-sm-12">
-               <ul class="list-inline social-links">
-                  <li class="list-inline-item">
-                     <a target="_blank" href="https://www.facebook.com">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com">
                      <i class="fa fa-facebook" aria-hidden="true"></i>
                      <span class="sr-only">Facebook</span></a>
-                  </li>
-                  <li class="list-inline-item">
-                     <a target="_blank" href="https://www.instagram.com/hogan79/">
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/hogan79/">
                      <i class="fa fa-instagram" aria-hidden="true"></i>
                      <span class="sr-only">Instagram</span></a>
-                  </li>
-                  <li class="list-inline-item">
-                     <a target="_blank" href="https://www.twitter.com">
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.twitter.com">
                      <i class="fa fa-twitter" aria-hidden="true"></i>
                      <span class="sr-only">Twitter</span></a>
-                  </li>
-                  <li class="list-inline-item">
-                     <a target="_blank" href="https://www.youtube.com">
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com">
                      <i class="fa fa-envelope-o" aria-hidden="true"></i>
                      <span class="sr-only">EMail</span></a>
-                  </li>
-               </ul>
+                    </li>
+                </ul>
             </div>
-         </div>
-      </footer>
-      <!--SCRIPTS-->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmleda_Id7Qyv49IvagQEh0QK4cnPWgHY&callback=initMap"></script>  
-      <script src="assets/js/my-places.js"></script>
-      <!--SCRIPTS-->
-   </body>
+        </div>
+    </footer>
+    <!--SCRIPTS-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmleda_Id7Qyv49IvagQEh0QK4cnPWgHY&callback=initMap"></script>
+    <script src="assets/js/my-places.js"></script>
+    <!--SCRIPTS-->
+</body>
+
 </html>
