home page and search bar styling

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <body>
     <!--NAVBAR-->
-    <nav class="navbar navbar-dark navbar-expand-sm">
+    <nav class="navbar navbar-light navbar-expand-sm">
         <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
          </a>
