--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>My Travel Pal</title>
-</head> 
- 
-<body>   
-    <!--NAVBAR-->
-    <nav class="navbar navbar-dark navbar-expand-sm">
+</head>  
+        
+<body>                
+    <!--NAVBAR-->  
+    <nav class="navbar navbar-light navbar-expand-sm">
         <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
          </a>
@@ -29,7 +29,7 @@
                 <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> 
     <!--SECTION ONE-->
     <section class="home-page">
         <div class="jumbotron section-one">
@@ -73,14 +73,14 @@
  
             </div>
         </div> 
-
-        <!--SECTION TWO-->
+ 
+        <!--SECTION TWO--> 
         <!--MAP-->
-        <div class="col-12" style="float:left">
+        <div class="col-12" style="float:left; padding:0">
             <div id="map"></div> 
         </div>
         <!--HOTEL LISTING-->
-        <div class="col-4" id="listing" style="position:absolute; right:0">
+        <div class="col-4" id="listing" style="position:absolute; right:0; padding:0">
             <table id="resultsTable">
                 <tbody id="results"></tbody>
             </table>
