--- a/contact.html
+++ b/contact.html
@@ -1,131 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Elaine Archbold">
-    <meta name="description" content="My Travel Pal contact page">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
-    <script>
-        (function() {
-            emailjs.init("user_oaKOpLf7qMVhjLSIICjCg");
-        })();
-
-    </script>
-    <title>Contact</title>
-</head>
-
-<body>
-    <!--NAVBAR-->
-    <nav class="navbar navbar-light navbar-expand-sm">
-        <a class="navbar-brand" href="index.html" style="max-width: 30%;">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Elaine Archbold">
+      <meta name="description" content="My Travel Pal contact page">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
+      <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
+      <script>
+         (function() {
+             emailjs.init("user_oaKOpLf7qMVhjLSIICjCg");
+         })();
+         
+      </script>
+      <title>Contact</title>
+   </head>
+   <body>
+      <!--NAVBAR-->
+      <nav class="navbar navbar-light navbar-expand-sm">
+         <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
          </a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
-                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
-                <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
+               <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
+               <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
+               <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
             </ul>
-        </div>
-    </nav>
-    <!--CONTACT FORM-->
-    <section class="form-page">
-        <div class="main-form">
+         </div>
+      </nav>
+      <!--CONTACT FORM-->
+      <section class="form-page">
+         <div class="main-form">
             <div class="col-12">
-
-                <h3>get in touch!</h3>
-                <p>We'd love to hear from you...</p>
-                <div class="col-12">
-                    <form id="myform" onsubmit="return sendMail(this);" method="POST">
-                        <input type="text" class="form-control" name="from_name" placeholder="Name" required/>
-                        <input type="text" class="form-control" name="from_email" placeholder="Email Address" required/>
-                        <textarea rows="10" class="form-control" name="query" placeholder="Type your query here..." required></textarea>
-                        <div class="form-row text-center">
-                            <div class="col-12"><button type="submit" class="btn btn-primary center-block">Send</button></div>
-                        </div>
-                    </form>
-                </div>
+               <h3>get in touch!</h3>
+               <p>We'd love to hear from you...</p>
+               <div class="col-12">
+                  <form id="myform" onsubmit="return sendMail(this);" method="POST">
+                     <input type="text" class="form-control" name="from_name" placeholder="Name" required/>
+                     <input type="text" class="form-control" name="from_email" placeholder="Email Address" required/>
+                     <textarea rows="10" class="form-control" name="query" placeholder="Type your query here..." required></textarea>
+                     <div class="form-row text-center">
+                        <div class="col-12"><button type="submit" class="btn btn-primary center-block">Send</button></div>
+                     </div>
+                  </form>
+               </div>
             </div>
-
-        </div>
-    </section>
-    <section class="find-me">
-        <div class="container-fluid">
+         </div>
+      </section>
+      <section class="find-me">
+         <div class="container-fluid">
             <div class="row">
-                <div class="container-fluid">
-                    <h1>FIND US</h1>
-                </div>
+               <div class="container-fluid">
+                  <h1>FIND US</h1>
+               </div>
             </div>
             <!--GOOGLE MAPS IFRAME-->
             <div class="row">
-                <div class="col-sm-8">
-                    <div class="iframe-container">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <div class="iframe-container">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.0977399094672!2d-6.263888747976512!3d53.35940567988351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e7c51dc2dd7%3A0x287a54967bde958e!2sDorset%20Street%20Lower%2C%20Northside%2C%20Dublin!5e0!3m2!1sen!2sie!4v1576252659169!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
-                            </div>
+               <div class="col-sm-8">
+                  <div class="iframe-container">
+                     <div class="embed-responsive embed-responsive-16by9">
+                        <div class="iframe-container">
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.0977399094672!2d-6.263888747976512!3d53.35940567988351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e7c51dc2dd7%3A0x287a54967bde958e!2sDorset%20Street%20Lower%2C%20Northside%2C%20Dublin!5e0!3m2!1sen!2sie!4v1576252659169!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
                         </div>
-                    </div>
-                </div>
-                <!--CONTACT DETAILS-->
-                <div class="col-sm-4">
-                    <div class="find-me-container container-fluid text-center">
-                        <h3>address</h3>
-                        <p>My Travel Pal<br>Dorset Street<br> Dublin 1
-                        </p>
-                        <h3>email</h3>
-                        <p>info@rmytravelpal.com</p>
-                        <h3>phone</h3>
-                        <p>+353 (01) 8401222</p>
-                        <br>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
+               <!--CONTACT DETAILS-->
+               <div class="col-sm-4">
+                  <div class="find-me-container container-fluid text-center">
+                     <h3>address</h3>
+                     <p>My Travel Pal<br>Dorset Street<br> Dublin 1
+                     </p>
+                     <h3>email</h3>
+                     <p>info@rmytravelpal.com</p>
+                     <h3>phone</h3>
+                     <p>+353 (01) 8401222</p>
+                     <br>
+                  </div>
+               </div>
             </div>
-        </div>
-    </section>
-    <!--FOOTER-->
-    <footer class="container-fluid footer-details">
-        <div class="row footer-details">
+         </div>
+      </section>
+      <!--FOOTER-->
+      <footer class="container-fluid footer-details">
+         <div class="row footer-details">
             <div class="col-xs-12 col-sm-12">
-                <ul class="list-inline social-links">
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.facebook.com">
+               <ul class="list-inline social-links">
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.facebook.com">
                      <i class="fa fa-facebook" aria-hidden="true"></i>
                      <span class="sr-only">Facebook</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.instagram.com/hogan79/">
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.instagram.com/hogan79/">
                      <i class="fa fa-instagram" aria-hidden="true"></i>
                      <span class="sr-only">Instagram</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.twitter.com">
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.twitter.com">
                      <i class="fa fa-twitter" aria-hidden="true"></i>
                      <span class="sr-only">Twitter</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.youtube.com">
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.youtube.com">
                      <i class="fa fa-envelope-o" aria-hidden="true"></i>
                      <span class="sr-only">EMail</span></a>
-                    </li>
-                </ul>
+                  </li>
+               </ul>
             </div>
-        </div>
-    </footer>
-    <!--SCRIPTS-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="assets/js/sendEmail.js"></script>
-    <!--SCRIPTS-->
-</body>
-
+         </div>
+      </footer>
+      <!--SCRIPTS-->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <script src="assets/js/scripts/sendEmail.js"></script>
+      <!--SCRIPTS-->
+   </body>
 </html>
