--- a/index.html
+++ b/index.html
@@ -1,65 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Elaine Archbold">
-    <meta name="description" content="My Travel Pal, the only travel companion you will ever need">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine.js" integrity="sha256-PePX8Jc4TIxzzVz0Qe4NsH3OUU8+Y49DBWvYgggNqkY=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine-html.js" integrity="sha256-qazAASTTgUrq9SOYkPSB3oEuqbhn+2j4kxGkVZ0GKjY=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/boot.js" integrity="sha256-HG8TKl0T65NyELmbUoo0H7/a1e++smYdXXtuuEsyKok=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine.css" integrity="sha256-YzqdEMEXu1sH1t2Y9tk3XhKhxy1xMWvcA1koZx43k+8=" crossorigin="anonymous" /> 
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>My Travel Pal</title>
-</head>  
-              
-<body>                 
-    <!--NAVBAR-->   
-    <nav class="navbar navbar-light navbar-expand-sm">
-        <a class="navbar-brand" href="index.html" style="max-width: 30%;">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Elaine Archbold">
+      <meta name="description" content="My Travel Pal, the only travel companion you will ever need">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
+      <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <title>My Travel Pal</title>
+   </head>
+   <body>
+      <!--NAVBAR-->   
+      <nav class="navbar navbar-light navbar-expand-sm">
+         <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
          </a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-                <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
-                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
-                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
+               <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="index.html">home</a></li>
+               <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
+               <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
             </ul>
-        </div>
-    </nav>  
-
-  
- 
-    <!--SECTION ONE-->
-    <section class="home-page">
-        <div class="jumbotron section-one">
+         </div>  
+      </nav>
+      <!--SECTION ONE--> 
+      <section class="home-page">
+         <div class="jumbotron section-one">
             <div class="searchbar">
-                <div class="col-12 header">
-                    <h1>Find a hotel</h1>
-                </div>
-                <form>
-
-                    <!--SELECT LOCATION FIELD-->
-                    <div class="inner-form">
-
-                        <div class="input-field-one">
-                            <input type="text" placeholder="Enter a city" id="autocomplete"/>
-                        </div>
-
-                        <!--SELECT COUNTRY FIELD-->
- 
-                        <div class="input-field-two">
-
-                            <select id="country"> 
+               <div class="col-12 header">
+                  <h1>Find a hotel</h1>
+               </div>
+               <form>
+                  <!--SELECT LOCATION FIELD-->
+                  <div class="inner-form">
+                     <div class="input-field-one">
+                        <input type="text" placeholder="Enter a city" id="autocomplete"/>
+                     </div>
+                     <!--SELECT COUNTRY FIELD-->
+                     <div class="input-field-two">
+                        <select id="country">
                            <option value="all">All</option>
-                           <option value="au">Australia</option> 
+                           <option value="au">Australia</option>
                            <option value="br">Brazil</option>
                            <option value="ca">Canada</option>
                            <option value="fr">France</option>
@@ -68,93 +54,88 @@
                            <option value="nz">New Zealand</option>
                            <option value="it">Italy</option>
                            <option value="za">South Africa</option>
-                           <option value="es">Spain</option> 
+                           <option value="es">Spain</option>
                            <option value="pt">Portugal</option>
                            <option value="us" selected>U.S.A.</option>
                            <option value="uk">United Kingdom</option>
                         </select>
-                        </div>
-                    </div>
- 
-                </form> 
- 
+                     </div>
+                  </div>
+               </form>
             </div>
-        </div> 
- 
-        <!--SECTION TWO--> 
-        <!--MAP-->
-        <div class="col-12" style="float:left; padding:0">
-            <div id="map"></div> 
-        </div>
-        <!--HOTEL LISTING-->
-        <div class="col-4" id="listing" style="position:absolute; right:0; padding:0">
+         </div>
+         <!--SECTION TWO--> 
+         <!--MAP-->
+         <div class="col-12" style="float:left; padding:0">
+            <div id="map"></div>
+         </div>
+         <!--HOTEL LISTING-->
+         <div class="col-4" id="listing" style="position:absolute; right:0; padding:0">
             <table id="resultsTable">
-                <tbody id="results"></tbody>
+               <tbody id="results"></tbody>
             </table>
             <div style="display:none">
-                <div id="info-content">
-                    <table>
-                        <tr id="iw-url-row" class="iw_table_row">
-                            <td id="iw-icon" class="iw_table_icon"></td>
-                            <td id="iw-url"></td>
-                        </tr>
-                        <tr id="iw-address-row" class="iw_table_row">
-                            <td class="iw_attribute_name">Address:</td>
-                            <td id="iw-address"></td>
-                        </tr>
-                        <tr id="iw-phone-row" class="iw_table_row">
-                            <td class="iw_attribute_name">Telephone:</td>
-                            <td id="iw-phone"></td>
-                        </tr>
-                        <tr id="iw-rating-row" class="iw_table_row">
-                            <td class="iw_attribute_name">Rating:</td>
-                            <td id="iw-rating"></td>
-                        </tr>
-                        <tr id="iw-website-row" class="iw_table_row">
-                            <td class="iw_attribute_name">Website:</td>
-                            <td id="iw-website"></td>
-                        </tr>
-                    </table>
-                </div>
-            </div> 
-        </div>     
-    </section> 
-    <!--FOOTER-->
-    <footer class="container-fluid footer-details">
-      
-        <div class="row footer-details">
+               <div id="info-content">
+                  <table>
+                     <tr id="iw-url-row" class="iw_table_row">
+                        <td id="iw-icon" class="iw_table_icon"></td>
+                        <td id="iw-url"></td>
+                     </tr>
+                     <tr id="iw-address-row" class="iw_table_row">
+                        <td class="iw_attribute_name">Address:</td>
+                        <td id="iw-address"></td>
+                     </tr>
+                     <tr id="iw-phone-row" class="iw_table_row">
+                        <td class="iw_attribute_name">Telephone:</td>
+                        <td id="iw-phone"></td>
+                     </tr>
+                     <tr id="iw-rating-row" class="iw_table_row">
+                        <td class="iw_attribute_name">Rating:</td>
+                        <td id="iw-rating"></td>
+                     </tr>
+                     <tr id="iw-website-row" class="iw_table_row">
+                        <td class="iw_attribute_name">Website:</td>
+                        <td id="iw-website"></td>
+                     </tr>
+                  </table>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!--FOOTER-->
+      <footer class="container-fluid footer-details">
+         <div class="row footer-details">
             <div class="col-xs-12 col-sm-12">
-                <ul class="list-inline social-links">
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.facebook.com">
+               <ul class="list-inline social-links">
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.facebook.com">
                      <i class="fa fa-facebook" aria-hidden="true"></i>
                      <span class="sr-only">Facebook</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.instagram.com/hogan79/">
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.instagram.com/hogan79/">
                      <i class="fa fa-instagram" aria-hidden="true"></i>
                      <span class="sr-only">Instagram</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.twitter.com">
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.twitter.com">
                      <i class="fa fa-twitter" aria-hidden="true"></i>
                      <span class="sr-only">Twitter</span></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="https://www.youtube.com">
+                  </li>
+                  <li class="list-inline-item">
+                     <a target="_blank" href="https://www.youtube.com">
                      <i class="fa fa-envelope-o" aria-hidden="true"></i>
                      <span class="sr-only">EMail</span></a>
-                    </li>
-                </ul>
-            </div>   
-        </div>
-    </footer> 
-    <!--SCRIPTS-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmleda_Id7Qyv49IvagQEh0QK4cnPWgHY&libraries=places&callback=initMap" async defer></script>
-    <script src="assets/js/script.js"></script>
-    <!--SCRIPTS-->
-</body>
-
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </footer>
+      <!--SCRIPTS-->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmleda_Id7Qyv49IvagQEh0QK4cnPWgHY&libraries=places&callback=initMap" async defer></script>
+      <script src="assets/js/scripts/script.js"></script>
+      <!--SCRIPTS-->
+   </body>
 </html>
