changes made to cookies

--- a/my-places.html
+++ b/my-places.html
@@ -15,8 +15,8 @@
       <link rel="stylesheet" href="assets/css/style.css">
       <title>My Places</title>
    </head>
-   <body>  
-      <!--NAVBAR-->   
+   <body>     
+      <!--NAVBAR-->     
       <nav class="navbar navbar-light navbar-expand-sm">
          <a class="navbar-brand" href="index.html" style="max-width: 30%;">
          <img src="assets/images/newlogo.png" class="img-fluid" alt="logo">
@@ -29,18 +29,19 @@
                <li class="active nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="my-places.html">my places</a></li>
                <li class="nav-item mr-2 hvr-sweep-to-bottom"><a class="nav-link" href="contact.html">contact</a></li>
             </ul> 
-         </div>    
-      </nav> 
-      <!--SECTION ONE-->        
-      <section class="my-places">
+         </div>        
+      </nav>       
+      <!--SECTION ONE-->          
+      <section class="my-places">   
+
          <h2>My Places</h2>
          <p>Where in the world have you been?</p>
          <div class="directions">
-            <h4>Click and drag to move the map. <br>Click an map area to select or select from the list</h4>
+            <h4>Click and drag to move the map <br>Click a map area to select country or select from the list <br>To deslect a country, uncheck the country checkbox on the list</h4>
          </div>
          <div class="row">
-            <div id="mapdiv">
-            </div>
+            <div id="mapdiv"> 
+            </div> 
             <div class="section-map-list">
                <ul class="nav nav-tabs">
                   <li class="active">
@@ -72,18 +73,18 @@
                      <table class="table table-hover table-striped">
                         <tbody></tbody>
                      </table>
-                  </div>
+                  </div> 
                   <div id="southAmerica" class="tab-pane">
                      <table class="table table-hover table-striped">
-                        <tbody></tbody>
-                     </table>
-                  </div>
-                  <div id="africa" class="tab-pane">
-                     <table class="table table-hover table-striped">
-                        <tbody></tbody>
-                     </table>
-                  </div>
-                  <div id="asia" class="tab-pane">
+                        <tbody></tbody> 
+                     </table>          
+                  </div>         
+                  <div id="africa" class="tab-pane">     
+                     <table class="table table-hover table-striped">  
+                        <tbody></tbody>   
+                     </table>            
+                  </div>    
+                  <div id="asia" class="tab-pane"> 
                      <table class="table table-hover table-striped">
                         <tbody></tbody>
                      </table>
@@ -116,15 +117,15 @@
                      <a target="_blank" href="https://www.twitter.com">
                      <i class="fa fa-twitter" aria-hidden="true"></i>
                      <span class="sr-only">Twitter</span></a>
-                  </li>
+                  </li> 
                   <li class="list-inline-item">
                      <a target="_blank" href="https://www.youtube.com">
                      <i class="fa fa-envelope-o" aria-hidden="true"></i>
                      <span class="sr-only">EMail</span></a>
                   </li>
                </ul>
-            </div>
-         </div>
+            </div>  
+         </div> 
       </footer>
       <!--SCRIPTS-->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
